SPINE/react-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
  namespace: spine
spec:
  selector:
    app: react-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30100
  type: NodePort
