SPINE/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  namespace: spine
spec:
  selector:
    app: traefik
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30102
  - name: dashboard
    port: 8080
    targetPort: 8080
    nodePort: 30101
